Update avatar image path in left sidebar template and apply font-family styles to body, html, and article content in custom CSS

--- a/docs/layouts/partials/sidebar/left.html
+++ b/docs/layouts/partials/sidebar/left.html
@@ -8,7 +8,7 @@
     <header>
         <figure class="site-avatar">
             <a href="{{ .Site.BaseURL | relLangURL }}">
-                <img src="img/avatar.png" width="300" height="300" class="site-logo" loading="lazy" alt="Avatar">
+                <img src="/treemit/img/avatar.png" width="300" height="300" class="site-logo" loading="lazy" alt="Avatar">
             </a>
             {{ with $.Site.Params.sidebar.emoji }}
                 <span class="emoji">{{ . }}</span>
