--- a/docs/static/custom.css
+++ b/docs/static/custom.css
@@ -1,3 +1,3 @@
-body {
-    font-family: 'Noto Sans JP', 'Lato', 'Yu Gothic', 'Meiryo', sans-serif;
+body, html, .article-content {
+    font-family: 'Noto Sans JP', 'Lato', 'Yu Gothic', 'Meiryo', sans-serif !important;
 }
