Add dark / light mode toggle functionality with custom JavaScript and CSS updates

--- a/docs/layouts/_default/baseof.html
+++ b/docs/layouts/_default/baseof.html
@@ -27,6 +27,7 @@
         </main>
     </div>
     {{ partial "footer/include.html" . }}
+    <script src="/treemit/custom.js"></script>
 </body>
 
 </html>
